# MCPStack

./: .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  README.md  SECURITY.md  build_docs.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: pre-commit.yaml  publish.yaml  tests.yaml
docs/: BRANDING.md  faq.md  getting_started.md  mcp_marketplace.md
docs/API/: mcpstackcore.md  stackconfig.md
docs/API/cli/: stack_cli.md
docs/API/mcp_config_generators/: claude.md  fastmcp.md  registry.md  universal.md
docs/API/presets/: base.md  registry.md
docs/API/tools/: base_tool.md  base_tool_cli.md  hello_world.md  registry.md
docs/API/utils/: exceptions.md  logging.md
docs/assets/document_dates/: user.config.css  user.config.js
docs/assets/document_dates/core/: core.css  default.config.js  timeago-load.js  utils.js
docs/assets/document_dates/languages/: en.json
docs/assets/js/: marketplace-filter.js
docs/guides/concepts/: config-and-env.md  mcp-hosts-and-configs.md  presets.md  tools-and-actions.md
docs/stylesheets/: extra.css  extra_mkdocs.css
docs/theme/overrides/: home.html
docs/tutorials/: first-pipeline.md  first-preset.md  first-tool.md  index.md  mimic-jupyter.md  save-load.md
src/MCPStack/: cli.py  stack.py
src/MCPStack/core/: config.py  server.py
src/MCPStack/core/docker/: __init__.py  docker_builder.py  docker_config_generator.py  dockerfile_generator.py
src/MCPStack/core/mcp_config_generator/: registry.py
src/MCPStack/core/mcp_config_generator/mcp_config_generators/: claude_mcp_config.py  docker_mcp_config.py  fast_mcp_config.py  universal_mcp_config.py
src/MCPStack/core/preset/: base.py
src/MCPStack/core/preset/presets/: example_preset.py
src/MCPStack/core/tool/: base.py
src/MCPStack/core/tool/cli/: base.py
src/MCPStack/core/utils/: exceptions.py  logging.py
src/MCPStack/tools/: registry.py
src/MCPStack/tools/hello_world/: __init__.py  cli.py  hello_world.py
tests/core/: test_config.py  test_docker.py  test_docker_builder_coverage.py  test_docker_cli_simple.py  test_docker_config_coverage.py  test_dockerfile_coverage.py  test_mcp_config_generator.py  test_server.py
tests/integration/: test_docker_integration.py
tests/mcpstack/: test_cli.py  test_stack.py
tests/tools/: test_hello_world.py
